swagger 명세 추가 및 기타 API 오류 수정
