# server/src/router/file.ts
@@ -1,10 +1,8 @@
 import express from 'express';
 const router = express.Router();
 
-import { upload, uploadFiles, deleteFiles } from '../controller/file';
+import { multerUpload, uploadFiles } from '../middleware/multer';
 
-router.post('/', upload.array('img', 10), uploadFiles);
-
-router.delete('/:file', deleteFiles);
+router.post('/', multerUpload.array('img', 10), uploadFiles);
 
 export default router;
